update field to be able to put actions inline

--- a/pages/pmx-present.html
+++ b/pages/pmx-present.html
@@ -15,7 +15,7 @@ permalink: /present
 </div>
 
 <main class="app__container">
-  <header class="app-header">
+  <header class="app-header px-4 py-2">
     {% include blocks/app-header.html %}
   </header>
 
