--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -9,33 +9,21 @@ permalink: /selectors
   <div class="sm:w-1/2 px-4">
 
     <!-- Field -->
-    <div class="field JS_field">
+    <div class="field JS_field" tabindex="">
       <div class="field__label">Checkbox</div>
       <div class="field__value">
-        <div class="selector selector--singleselect selector--expanded animate--loading JS_selector">
-          <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
-            <div class="selector__block">
-              <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;"></div>
+        <div class="inline align-middle">
+          <div class="selector selector--singleselect selector--expanded animate--loading JS_selector">
+            <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
+              <div class="selector__block">
+                <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;"></div>
+              </div>
             </div>
-          </div>
-          <div class="selector__itemSeperator"></div>
-          <div class="selector__item JS_selectorItem">
-            <div class="selector__block">
-              <div class="selector__blockPart selector__blockPart--prefix"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Field -->
-    <div class="field JS_field">
-      <div class="field__label">Assigned to</div>
-      <div class="field__value">
-        <div class="selector selector--singleselect animate--loading">
-          <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
-            <div class="selector__block">
-              <div class="selector__blockPart selector__blockPart--field">Nick De Jaeger</div>
+            <div class="selector__itemSeperator"></div>
+            <div class="selector__item JS_selectorItem">
+              <div class="selector__block">
+                <div class="selector__blockPart selector__blockPart--prefix"></div>
+              </div>
             </div>
           </div>
         </div>
@@ -46,8 +34,52 @@ permalink: /selectors
     <div class="field JS_field">
       <div class="field__label">Assigned to</div>
       <div class="field__value">
-        <div class="inline-action secondary animate-fly-in-left JS_has-popup JS_has-popup--error" data-popid="#ms-error"></div>
-        <input type="text" value="Nick De Jaeger" class="field__input">
+        <div class="inline align-middle">
+          <div class="selector selector--singleselect animate--loading">
+            <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
+              <div class="selector__block">
+                <div class="selector__blockPart selector__blockPart--field">Nick De Jaeger</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Field -->
+    <div class="field field--error JS_field">
+      <div class="field__label">Assigned to</div>
+      <div class="field__value">
+        <div class="inline-action secondary animate-fly-in-left JS_has-popup JS_has-popup--error" data-popid="#ms-error-user"></div>
+        <div class="inline align-middle JS_has-popup" data-popid="#ms-single-input">_Not Assigned</div>
+      </div>
+    </div>
+
+    <!-- Popup (error) -->
+    <div class="multiSelector" id="ms-error-user">
+      <div class="itemBox">
+        <ul class="itemBox__row itemBox__row--custom">
+          <li class="itemBox__cell">
+            <div class="itemBox__cellInner">
+              <div class="note note--error">
+                <p>Item must have a user assigned.</p>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- Popup (input) -->
+    <div class="multiSelector animate--popup" id="ms-single-input" style="margin-top: -29px; margin-left: -10px;">
+      <div class="itemBox JS_itemBox">
+        <ul class="itemBox__row">
+          <li class="itemBox__cell">
+            <div class="itemBox__cellInner">
+              <input type="input" value="_Not Assigned" autofocus>
+            </div>
+          </li>
+        </ul>
       </div>
     </div>
 
@@ -59,6 +91,7 @@ permalink: /selectors
     <div class="field field--tooltip">
       <div class="field__label JS_has-popup JS_has-popup--tooltip" data-popid="#multiSelector-privacy">Privacy Policy <div class="inline-action animate-fly-in-left"></div></div>
       <div class="field__value">
+        <div class="inline align-middle">
           <div class="selector selector--singleselect selector--expanded JS_selector">
             <div class="selector__item JS_selectorItem JS_selectorItem--active selector__item--selected">
               <div class="selector__block">
@@ -72,7 +105,8 @@ permalink: /selectors
               </div>
             </div>
           </div>
-          <div class="inline align-middle">with our <a href="#" class="link link--primary">Privacy Policiy</a>.</div>
+        </div>
+        <div class="inline align-middle">with our <a href="#" class="link link--primary">Privacy Policiy</a>.</div>
       </div>
     </div>
 
@@ -97,7 +131,7 @@ permalink: /selectors
     <div class="field JS_field">
       <div class="field__label">Email</div>
       <div class="field__value">
-        <input type="text" value="nick.de.jaeger@tenforce.com" class="field__input">
+        <div class="inline align-middle">nick.de.jaeger@tenforce.com</div>
       </div>
       <div class="note">
         <p>Fill in a valid email address.</p>
@@ -109,14 +143,17 @@ permalink: /selectors
       <div class="field__label">Status</div>
       <div class="field__value">
         <div class="inline-action secondary animate-fly-in-left JS_has-popup JS_has-popup--error" data-popid="#ms-error"></div>
-        <div class="selector selector--singleselect JS_has-popup JS_has-popup--error" data-popid="#ms-status">
-          <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
-            <div class="selector__block">
-              <div class="selector__blockPart selector__blockPart--prefix JS_singleSelect--prefix" style="background-color: #FF9B9B;"></div>
-              <div class="selector__blockPart selector__blockPart--field JS_singleSelect--label">Not started</div>
+        <div class="inline align-middle">
+          <div class="selector selector--singleselect JS_has-popup JS_has-popup--error" data-popid="#ms-status">
+            <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
+              <div class="selector__block">
+                <div class="selector__blockPart selector__blockPart--prefix JS_singleSelect--prefix" style="background-color: var(--color-red);"></div>
+                <div class="selector__blockPart selector__blockPart--field JS_singleSelect--label">Not started</div>
+              </div>
             </div>
           </div>
         </div>
+        <div class="inline align-middle">check correct alignment</a>.</div>
       </div>
       <div class="note">
         <p>Actual invoice amount</p>
@@ -207,7 +244,7 @@ permalink: /selectors
     <div class="selector selector--singleselect JS_has-popup JS_has-popup--error" data-popid="#ms-status">
       <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
         <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--prefix JS_singleSelect--prefix" style="background-color: #FF9B9B;"></div>
+          <div class="selector__blockPart selector__blockPart--prefix JS_singleSelect--prefix" style="background-color: var(--color-red);"></div>
           <div class="selector__blockPart selector__blockPart--field JS_singleSelect--label">Not started</div>
         </div>
       </div>
@@ -305,7 +342,7 @@ permalink: /selectors
       <div class="selector__itemSeperator"></div>
       <div class="selector__item JS_selectorItem">
         <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #FF9B9B;">High</div>
+          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: var(--color-red);">High</div>
         </div>
       </div>
     </div>
@@ -326,14 +363,14 @@ permalink: /selectors
       <div class="selector__itemSeperator"></div>
       <div class="selector__item JS_selectorItem">
         <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #FF9B9B;"></div>
+          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: var(--color-red);"></div>
           <div class="selector__blockPart selector__blockPart--field">Brandbaar</div>
         </div>
       </div>
       <div class="selector__itemSeperator"></div>
       <div class="selector__item JS_selectorItem">
         <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #FF9B9B;"></div>
+          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: var(--color-red);"></div>
           <div class="selector__blockPart selector__blockPart--field">Huidopname</div>
         </div>
       </div>
@@ -362,7 +399,7 @@ permalink: /selectors
       <div class="selector__itemSeperator"></div>
       <div class="selector__item JS_selectorItem">
         <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #FF9B9B;"></div>
+          <div class="selector__blockPart selector__blockPart--prefix" style="background-color: var(--color-red);"></div>
           <div class="selector__blockPart selector__blockPart--field">Finished</div>
         </div>
       </div>
