--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -629,34 +629,36 @@ permalink: /selectors
 <div class="field JS_field">
   <div class="field__label">Date  Filter</div>
   <div class="field__value">
-    <div class="selector selector--expanded JS_has-popup" data-popid="#filter-datepicker">
-      <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">Include</div>
-      <div class="selector__item JS_selectorItem--active selector__item--selected">
-        <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--field">next 2 weeks (12/03/18-25/03/18)</div>
+    <div class="inline align-middle overflow-hidden">
+      <div class="selector selector--expanded JS_has-popup" data-popid="#filter-datepicker">
+        <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">Include</div>
+        <div class="selector__item JS_selectorItem--active selector__item--selected">
+          <div class="selector__block">
+            <div class="selector__blockPart selector__blockPart--field">next 2 weeks (12/03/18-25/03/18)</div>
+          </div>
+        </div>
+        <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">And</div>
+        <div class="selector__item JS_selectorItem--active selector__item--selected">
+          <div class="selector__block">
+            <div class="selector__blockPart selector__blockPart--field">19/03/18-20/03/18</div>
+          </div>
         </div>
       </div>
-      <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">And</div>
-      <div class="selector__item JS_selectorItem--active selector__item--selected">
-        <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--field">19/03/18-20/03/18</div>
-        </div>
+      <div class="selector selector--expanded">
+        <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">Or</div>
       </div>
-    </div>
-    <div class="selector selector--expanded">
-      <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">Or</div>
-    </div>
-    <div class="selector selector--expanded">
-      <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">Exclude</div>
-      <div class="selector__item JS_selectorItem--active selector__item--selected">
-        <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--field">today</div>
+      <div class="selector selector--expanded">
+        <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">Exclude</div>
+        <div class="selector__item JS_selectorItem--active selector__item--selected">
+          <div class="selector__block">
+            <div class="selector__blockPart selector__blockPart--field">today</div>
+          </div>
         </div>
-      </div>
-      <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">Or</div>
-      <div class="selector__item JS_selectorItem--active selector__item--selected">
-        <div class="selector__block">
-          <div class="selector__blockPart selector__blockPart--field">18/03/18</div>
+        <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">Or</div>
+        <div class="selector__item JS_selectorItem--active selector__item--selected">
+          <div class="selector__block">
+            <div class="selector__blockPart selector__blockPart--field">18/03/18</div>
+          </div>
         </div>
       </div>
     </div>
