SElectors: updated error animation

--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -169,8 +169,9 @@ permalink: /selectors
     <div class="field JS_field JS_field--error">
       <div class="field__label">Status</div>
       <div class="field__value">
-        <div class="inline align-middle JS_moveToRight">
-          <div class="selector selector--singleselect JS_has-popup JS_has-popup--error" data-popid="#ms-status">
+        <div class="inline-action secondary error JS_has-popup" data-popid="#ms-error"></div>
+        <div class="inline align-middle">
+          <div class="selector selector--singleselect JS_has-popup" data-popid="#ms-status">
             <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
               <div class="selector__block">
                 <div class="selector__blockPart selector__blockPart--prefix JS_singleSelect--prefix" style="background-color: var(--color-red);"></div>
@@ -251,12 +252,12 @@ permalink: /selectors
 
 
     <!-- Field -->
-    <div class="field JS_field">
+    <div class="field JS_field  JS_field--error">
       <div class="field__label">Status</div>
       <div class="field__value">
-        <div class="inline-action secondary error"></div>
-        <div class="inline align-middle JS_moveToRight">
-          <div class="selector selector--singleselect">
+        <div class="inline-action secondary error JS_has-popup" data-popid="#ms-error"></div>
+        <div class="inline align-middle">
+          <div class="selector selector--singleselect JS_has-popup" data-popid="#ms-status">
             <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
               <div class="selector__block">
                 <div class="selector__blockPart selector__blockPart--prefix JS_singleSelect--prefix" style="background-color: var(--color-red);"></div>
@@ -696,8 +697,6 @@ permalink: /selectors
   $('.JS_field--error').each(function(){
     const errorField = $(this);
     errorField.find('.JS_has-popup').removeClass('JS_has-popup--error');
-    const icon = errorField.find('.JS_errorActionIcon');
-    $(icon).removeClass('animate-fly-in-left');
   });
 
 $("#ms-status .JS_error-popupRow").on('click', function(){
@@ -706,24 +705,7 @@ $("#ms-status .JS_error-popupRow").on('click', function(){
   $('.JS_field--error').each(function(){
     const errorField = $(this);
     errorField.addClass('field--error');
-
     errorField.find('.JS_has-popup').addClass('JS_has-popup--error');
-    if(errorField.find('.field__value .JS_errorActionIcon').length === 0) {
-      $.Velocity.animate($(errorField.find('.field__value .JS_moveToRight').children()), {
-        "margin-left": '35px'
-      }, {
-        duration: 1000
-      });
-
-      errorField.find('.field__value').prepend('<div class="inline-action secondary animate-fly-in-left JS_has-popup JS_has-popup--error JS_errorActionIcon" data-popid="#ms-error" style="width:0px;"></div>');
-
-      errorField.find('.JS_errorActionIcon').on('click', function() {
-        handlePopupClick(this);
-      });
-    }
-
-    const icon = errorField.find('.JS_errorActionIcon');
-    $(icon).addClass('animate-fly-in-left').css('opacity', 1);
   });
 });
 </script>
