remove outline on focus for buttons

--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -4,7 +4,7 @@ title: Selectors
 permalink: /selectors
 ---
 
-<div class="flex min-h-screen">
+<div class="flex flex-col sm:flex-row min-h-screen">
 
   <div class="sm:w-1/2 px-4">
 
