--- a/pages/pmx-present.html
+++ b/pages/pmx-present.html
@@ -21,7 +21,7 @@ permalink: /present
 
   {% include blocks/old-pmx-tabline.html %}
 
-  <div style="background-color: #4692C3;padding: 10px 0;">
+  <div style="background-color: #4692C3;" class="py-2 bg-blue-light">
     {% include blocks/breadcrumbs.html %}
     {% include blocks/old-pmx-item-detail.html %}
   </div>
