--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -116,7 +116,7 @@ permalink: /selectors
 
     <!-- Field -->
     <div class="field field--tooltip" tabindex="4">
-      <div class="field__label JS_has-popup JS_has-popup--tooltip" data-popid="#multiSelector-privacy">Privacy Policy <div class="inline-action animate-fly-in-left"></div></div>
+      <div class="field__label JS_has-popup JS_has-popup--tooltip" data-popid="#multiSelector-privacy">Privacy Policy <div class="inline-action primary  animate-fly-in-left"></div></div>
       <div class="field__value">
         <div class="inline align-middle">
           <div class="selector selector--singleselect selector--expanded JS_selector">
