update aniamtion class names

--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -13,7 +13,7 @@ permalink: /selectors
       <div class="field__label">Checkbox</div>
       <div class="field__value">
         <div class="inline align-middle">
-          <div class="selector selector--singleselect selector--expanded animate--loading JS_selector">
+          <div class="selector selector--singleselect selector--expanded animate-loading JS_selector">
             <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
               <div class="selector__block">
                 <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;"></div>
@@ -39,7 +39,7 @@ permalink: /selectors
     </div>
 
     <!-- Popup (input) -->
-    <div class="multiSelector animate--popup" id="ms-title-input" style="margin-top: -49px; margin-left: -10px;">
+    <div class="multiSelector animate-popup" id="ms-title-input" style="margin-top: -49px; margin-left: -10px;">
       <div class="itemBox JS_itemBox">
         <ul class="itemBox__row">
           <li class="itemBox__cell">
@@ -76,7 +76,7 @@ permalink: /selectors
     </div>
 
     <!-- Popup (input) -->
-    <div class="multiSelector animate--popup" id="ms-single-input" style="margin-top: -29px; margin-left: -10px;">
+    <div class="multiSelector animate-popup" id="ms-single-input" style="margin-top: -29px; margin-left: -10px;">
       <div class="itemBox JS_itemBox">
         <ul class="itemBox__row">
           <li class="itemBox__cell">
@@ -97,7 +97,7 @@ permalink: /selectors
     </div>
 
     <!-- Popup (input) -->
-    <div class="multiSelector animate--popup" id="ms-date-input" style="margin-top: -49px; margin-left: -10px;">
+    <div class="multiSelector animate-popup" id="ms-date-input" style="margin-top: -49px; margin-left: -10px;">
       <div class="itemBox JS_itemBox">
         <ul class="itemBox__row">
           <li class="itemBox__cell">
@@ -204,7 +204,7 @@ permalink: /selectors
     </div>
 
     <!-- Popup -->
-    <div class="multiSelector animate--popup" id="ms-status">
+    <div class="multiSelector animate-popup" id="ms-status">
       <div class="itemBox JS_itemBox">
         <ul class="itemBox__row">
           <li class="itemBox__cell">
