rename overlay class

--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -674,7 +674,7 @@ permalink: /selectors
     checkEmptyFields();
   });
 
-  $('.app__overlay').on('click', function() {
+  $('.overlay-body').on('click', function() {
     $('.field').removeClass('field--focus');
     checkEmptyFields();
   });
