--- a/pages/tutorial.html
+++ b/pages/tutorial.html
@@ -5,7 +5,7 @@ permalink: /tutorial
 ---
 
 <div class="app">
-  <div class="app__overlay"></div>
+  <div class="overlay-body"></div>
 
   <div class="app-navigator">
     {% include blocks/app-nav.html %}
