--- a/pages/pmx-present.html
+++ b/pages/pmx-present.html
@@ -4,7 +4,7 @@ title: PMX present
 permalink: /present
 ---
 
-<div class="app__overlay"></div>
+<div class="overlay-body"></div>
 
 <div class="app-navigator">
   {% include blocks/app-nav.html %}
