simplify with tailwind framework

--- a/pages/pmx-future.html
+++ b/pages/pmx-future.html
@@ -4,7 +4,7 @@ title: PMX future
 permalink: /future
 ---
 
-  <div class="overlay-body"></div>
+  <div class="overlay-body fixed pin opacity-0 pointer-events-none transition z-40"></div>
 
   <div class="app-navigator">
     {% include blocks/app-nav.html %}
@@ -14,7 +14,7 @@ permalink: /future
     {% include blocks/user-menu.html %}
   </div>
 
-  <main class="app__container">
+  <main class="container-master">
     <header class="app-header px-4 py-2">
       {% include blocks/app-header.html %}
     </header>
@@ -51,4 +51,4 @@ permalink: /future
     </div>
     <!-- /.app__document -->
   </main>
-  <!-- //app__container -->
+  <!-- //container-master -->
