--- a/pages/tutorial.html
+++ b/pages/tutorial.html
@@ -5,7 +5,7 @@ permalink: /tutorial
 ---
 
 <div class="app">
-  <div class="overlay-body"></div>
+  <div class="overlay-body fixed pin opacity-0 pointer-events-none transition z-40"></div>
 
   <div class="app-navigator">
     {% include blocks/app-nav.html %}
@@ -15,7 +15,7 @@ permalink: /tutorial
     {% include blocks/user-menu.html %}
   </div>
 
-  <main class="app__container">
+  <main class="container-master">
     <header class="app-header cf">
       {% include blocks/app-header.html %}
     </header>
