reorder stylesheet to avoind important

--- a/pages/tutorial.html
+++ b/pages/tutorial.html
@@ -4,19 +4,8 @@ title: Tutorial
 permalink: /tutorial
 ---
 
-<div class="app">
-  <div class="overlay-body fixed pin opacity-0 pointer-events-none transition z-40"></div>
-
-  <div class="app-navigator">
-    {% include blocks/app-nav.html %}
-  </div>
-
-  <div class="user-menu">
-    {% include blocks/user-menu.html %}
-  </div>
-
   <main class="container-master">
-    <header class="app-header cf">
+    <header class="app-header px-4 py-2">
       {% include blocks/app-header.html %}
     </header>
     {% include blocks/old-pmx-tabline.html %}
@@ -102,4 +91,3 @@ permalink: /tutorial
     </div>
 
   </main>
-</div>
