--- a/pages/pmx-future.html
+++ b/pages/pmx-future.html
@@ -6,11 +6,11 @@ permalink: /future
 
   <div class="overlay-body fixed pin opacity-0 pointer-events-none transition z-40"></div>
 
-  <div class="app-navigator">
+  <div class="app-navigator fixed pin-t z-50 w-1/2 h-screen transition bg-blue-dark">
     {% include blocks/app-nav.html %}
   </div>
 
-  <div class="user-menu">
+  <div class="user-menu fixed pin-t z-50 w-1/4 h-screen transition bg-blue-dark z-50">
     {% include blocks/user-menu.html %}
   </div>
 
