--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -9,11 +9,12 @@ permalink: /selectors
   <div class="sm:w-1/2 px-4">
 
     <!-- Field -->
-    <div class="field JS_field" tabindex="1">
+    <div class="field">
       <div class="field__label">Checkbox</div>
-      <div class="field__value">
-        <div class="inline align-middle">
-          <div class="selector selector--singleselect selector--expanded animate-loading JS_selector">
+      <div class="field__data">
+
+        <div class="field__value">
+          <div class="selector selector--singleselect selector--expanded JS_selector">
             <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
               <div class="selector__block">
                 <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;"></div>
@@ -26,19 +27,24 @@ permalink: /selectors
               </div>
             </div>
           </div>
+
+          <input class="field__input" type="text">
         </div>
+
       </div>
     </div>
 
     <!-- Field -->
-    <div class="field JS_field" tabindex="2">
-      <div class="field__label field__label--placeholder">Title</div>
-      <div class="field__value JS_has-popup" data-popid="#ms-title-input">
-
+    <div class="field">
+      <div class="field__label">Title</div>
+      <div class="field__data">
+        <div class="field__value">
+          <input class="field__input" type="text">
+        </div>
       </div>
     </div>
 
-    <!-- Popup (input) -->
+    <!-- Popup (input)
     <div class="multiSelector animate-popup" id="ms-title-input" style="margin-top: -49px; margin-left: -10px;">
       <div class="itemBox JS_itemBox">
         <ul class="itemBox__row">
@@ -50,17 +56,20 @@ permalink: /selectors
         </ul>
       </div>
     </div>
+  -->
 
     <!-- Field -->
-    <div class="field field--error JS_field" tabindex="3">
+    <div class="field field--error">
       <div class="field__label">Assigned to</div>
-      <div class="field__value">
-        <div class="inline-action secondary animate-fly-in-left JS_has-popup JS_has-popup--error" data-popid="#ms-error-user"></div>
-        <div class="inline align-middle JS_has-popup" data-popid="#ms-single-input">_Not Assigned</div>
+      <div class="field__data">
+        <div class="field__error"></div>
+        <div class="field__value">
+          <input class="field__input" type="text" value="_Not Assigned">
+        </div>
       </div>
     </div>
 
-    <!-- Popup (error) -->
+    <!-- Popup (error)
     <div class="multiSelector" id="ms-error-user">
       <div class="itemBox">
         <ul class="itemBox__row itemBox__row--custom">
@@ -74,8 +83,6 @@ permalink: /selectors
         </ul>
       </div>
     </div>
-
-    <!-- Popup (input) -->
     <div class="multiSelector animate-popup" id="ms-single-input" style="margin-top: -29px; margin-left: -10px;">
       <div class="itemBox JS_itemBox">
         <ul class="itemBox__row">
@@ -87,16 +94,18 @@ permalink: /selectors
         </ul>
       </div>
     </div>
-
+-->
     <!-- Field -->
-    <div class="field JS_field" tabindex="5">
-      <div class="field__label field__label--placeholder">Due date</div>
-      <div class="field__value JS_has-popup" data-popid="#ms-date-input">
-
+    <div class="field">
+      <div class="field__label">Due date</div>
+      <div class="field__data">
+        <div class="field__value">
+          <input class="field__input">
+        </div>
       </div>
     </div>
 
-    <!-- Popup (input) -->
+    <!-- Popup (input)
     <div class="multiSelector animate-popup" id="ms-date-input" style="margin-top: -49px; margin-left: -10px;">
       <div class="itemBox JS_itemBox">
         <ul class="itemBox__row">
@@ -108,17 +117,18 @@ permalink: /selectors
         </ul>
       </div>
     </div>
-
+ -->
 
   </div>
 
   <div class="sm:w-1/2 px-4">
 
     <!-- Field -->
-    <div class="field field--tooltip" tabindex="4">
-      <div class="field__label JS_has-popup JS_has-popup--tooltip" data-popid="#multiSelector-privacy">Privacy Policy <div class="inline-action primary  animate-fly-in-left"></div></div>
-      <div class="field__value">
-        <div class="inline align-middle">
+    <div class="field">
+      <div class="field__label">Privacy Policy <div class="inline-action primary animate-fly-in-left"></div></div>
+      <div class="field__data">
+
+        <div class="field__value">
           <div class="selector selector--singleselect selector--expanded JS_selector">
             <div class="selector__item JS_selectorItem JS_selectorItem--active selector__item--selected">
               <div class="selector__block">
@@ -132,8 +142,12 @@ permalink: /selectors
               </div>
             </div>
           </div>
+
+          <input class="field__input" type="text">
         </div>
-        <div class="inline align-middle">with our <a href="#" class="link link--primary">Privacy Policiy</a>.</div>
+
+        <div class="">with our <a href="#" class="link link--primary">Privacy Policiy</a>.</div>
+          
       </div>
     </div>
 
@@ -157,7 +171,7 @@ permalink: /selectors
     <!-- Field -->
     <div class="field JS_field">
       <div class="field__label">Email</div>
-      <div class="field__value">
+      <div class="field__data">
         <div class="inline align-middle">nick.de.jaeger@tenforce.com</div>
       </div>
       <div class="note">
@@ -168,7 +182,7 @@ permalink: /selectors
     <!-- Field -->
     <div class="field JS_field JS_field--error">
       <div class="field__label">Status</div>
-      <div class="field__value">
+      <div class="field__data">
         <div class="inline-action secondary error JS_has-popup" data-popid="#ms-error"></div>
         <div class="inline align-middle">
           <div class="selector selector--singleselect JS_has-popup" data-popid="#ms-status">
@@ -254,7 +268,7 @@ permalink: /selectors
     <!-- Field -->
     <div class="field JS_field  JS_field--error">
       <div class="field__label">Status</div>
-      <div class="field__value">
+      <div class="field__data">
         <div class="inline-action secondary error JS_has-popup" data-popid="#ms-error"></div>
         <div class="inline align-middle">
           <div class="selector selector--singleselect JS_has-popup" data-popid="#ms-status">
@@ -304,7 +318,7 @@ permalink: /selectors
 <!-- Field -->
 <div class="field JS_field">
   <div class="field__label">Danger level</div>
-  <div class="field__value">
+  <div class="field__data">
     <div class="selector selector--singleselect selector--expanded JS_selector">
       <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
         <div class="selector__block">
@@ -330,7 +344,7 @@ permalink: /selectors
 <!-- Field -->
 <div class="field JS_field">
   <div class="field__label">Product contact</div>
-  <div class="field__value">
+  <div class="field__data">
     <div class="selector selector--multiselect selector--expanded JS_selector">
       <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
         <div class="selector__block">
@@ -359,7 +373,7 @@ permalink: /selectors
 <!-- Field -->
 <div class="field JS_field">
   <div class="field__label">Status</div>
-  <div class="field__value">
+  <div class="field__data">
     <div class="selector selector--singleselect selector--expanded JS_selector">
       <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
         <div class="selector__block">
@@ -388,7 +402,7 @@ permalink: /selectors
 <!-- Field -->
 <div class="field JS_field">
   <div class="field__label">Tags</div>
-  <div class="field__value">
+  <div class="field__data">
     <div class="selector selector--multiselect selector--expanded JS_selector">
       <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
         <div class="selector__block">
@@ -417,7 +431,7 @@ permalink: /selectors
 <!-- Field -->
 <div class="field JS_field">
   <div class="field__label">Status</div>
-  <div class="field__value">
+  <div class="field__data">
     <div class="selector selector--singleselect selector--expanded JS_selector">
       <div class="selector__item JS_selectorItem">
         <div class="selector__block">
@@ -446,7 +460,7 @@ permalink: /selectors
 <!-- Field -->
 <div class="field JS_field">
   <div class="field__label">Checkbox (filter in header)</div>
-  <div class="field__value">
+  <div class="field__data">
     <div class="selector selector--multiselect selector--expanded JS_selector">
       <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
         <div class="selector__block">
@@ -466,7 +480,7 @@ permalink: /selectors
 <!-- Field -->
 <div class="field JS_field">
   <div class="field__label">Checkbox</div>
-  <div class="field__value">
+  <div class="field__data">
     <div class="selector selector--singleselect selector--expanded JS_selector">
       <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
         <div class="selector__block">
@@ -486,7 +500,7 @@ permalink: /selectors
 <!-- Field -->
 <div class="field JS_field">
   <div class="field__label">Checkbox</div>
-  <div class="field__value">
+  <div class="field__data">
     <div class="selector selector--singleselect selector--expanded JS_selector">
       <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem JS_toggle-progress">
         <div class="selector__block">
@@ -519,7 +533,7 @@ permalink: /selectors
 
 <!-- Field -->
 <div class="field JS_field">
-  <div class="field__value">
+  <div class="field__data">
     <div class="selector selector--expanded">
       <div class="selector__item JS_selectorItem--active selector__item--selected">
         <div class="selector__block">
@@ -538,7 +552,7 @@ permalink: /selectors
 <!-- Field -->
 <div class="field JS_field">
   <div class="field__label">Description</div>
-  <div class="field__value">
+  <div class="field__data">
     <div class="selector selector--expanded" >
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">Include</div>
       <div class="selector__item JS_selectorItem--active selector__item--selected">
@@ -564,7 +578,7 @@ permalink: /selectors
 <!-- Field -->
 <div class="field JS_field">
   <div class="field__label">Tags  Filter</div>
-  <div class="field__value">
+  <div class="field__data">
     <div class="selector selector--expanded JS_has-popup" data-popid="#filter-tagpicker">
       <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">Include</div>
       <div class="selector__item JS_selectorItem--active selector__item--selected">
@@ -606,7 +620,7 @@ permalink: /selectors
 <!-- Field -->
 <div class="field JS_field">
   <div class="field__label">Date  Filter</div>
-  <div class="field__value">
+  <div class="field__data">
     <div class="inline align-middle overflow-hidden">
       <div class="selector selector--expanded JS_has-popup" data-popid="#filter-datepicker">
         <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">Include</div>
@@ -648,7 +662,7 @@ permalink: /selectors
 <!-- Field -->
 <div class="field JS_field">
   <div class="field__label">Tags</div>
-  <div class="field__value">
+  <div class="field__data">
     <div class="selector selector--multiselect JS_has-popup JS_selector" data-popid="#multiSelector-tagpicker">
       <div class="selector__item JS_selectorItem--active selector__item--selected">
         <div class="selector__block">
